# spectra

./: .gitignore  .gitingore  Manual.md  README.md  environment.yml  intall_requires.txt  main.py  pyproject.toml  requirements.txt  setup.py  spectra.yml
.github/workflows/: draft-pdf.yml
STELAR/: .gitingore  StarLocalization.py  interface.py  main.py  setup.py  tools.py  widgets.py
STELAR/isochrone_models/BAHC15/Grid/BWeLM/: m0.5.HRD
STELAR/isochrone_models/SIESS/: 1myrZ002o.csv  3myrZ002o.csv
STELAR/isochrone_models/SIESS/Grid/OV02/: m0.1z02d02.hrd  m0.2z02d02.hrd  m0.3z02d02.hrd  m0.5z02d02.hrd  m0.6z02d02.hrd  m0.7z02d02.hrd  m0.8z02d02.hrd  m1.0z02d02.hrd  m1.1z02d02.hrd  m1.3z02d02.hrd  m1.5z02d02.hrd
isochrone_models/BAHC15/Grid/BWeLM/: m0.1.HRD  m0.2.HRD  m0.3.HRD  m0.4z02d02.hrd  m0.6.HRD  m0.7z02d02.hrd  m0.8.HRD  m0.9.HRD  m1.0.HRD  m1.1.HRD  m1.2.HRD  m1.3z02d02.hrd  m1.4z02d02.hrd
isochrone_models/SIESS/Grid/OV02/: m0.4z02d02.hrd  m0.9z02d02.hrd  m1.2z02d02.hrd  m1.4z02d02.hrd
outputs/tables/: Regression_model_report.csv  _final_result_table.csv
paper/: paper.bib  paper.md
spectra/: StarLocalization.py  interface.py  paths.py  tools.py  widgets.py
