[project]
name = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [{ "name" = "", "email" = "" }]
maintainers = [{ "name" = "", "email" = "" }]
description = ''
dependencies = [""]
version = "0.0.1"
[project.optional-dependencies]
docs = ["sphinx"]
release = ["build", "twine"]
test = ["pytest"]
[tool.pytest.ini_options]
addopts = ["--verbose"]
testpaths = ["tests"]